# SimpleRestDB

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: docker-ci.yml
app/: api_v1.py  database.py  handler.py  logging_config.py  main.py  models.py  schemas.py
requirements/: requirements-test.txt  requirements.txt
tests/: conftest.py  test_users.py
